<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:isScrollContainer="true"
            tools:context=".SettingsActivity">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="left|center_vertical"
                    android:text="@string/player"
                    android:textIsSelectable="false"
                    android:textStyle="bold"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical">


                <ImageView
                        android:id="@+id/contactImageView"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/choose_contact"
                        android:src="@drawable/choose"/>

                <TextView
                        android:id="@+id/contactTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/choose_contact"
                        android:textIsSelectable="false"
                        android:textStyle="bold"/>

            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

            <TextView
                    android:id="@+id/spinner_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="left|center_vertical"
                    android:text="@string/size"
                    android:textIsSelectable="false"
                    android:textStyle="bold"/>

            <Spinner
                    android:id="@+id/size_choice_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="right|center_vertical"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

            <TextView
                    android:id="@+id/gamemode_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="left|center_vertical"
                    android:text="@string/game_mode"
                    android:textIsSelectable="false"
                    android:textStyle="bold"/>

            <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="right|center_vertical"
                    android:orientation="horizontal">

                <RadioButton
                        android:id="@+id/radio_normal_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/normal"
                        android:checked="true"/>

                <RadioButton
                        android:id="@+id/radio_timed_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timed"/>
            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

            <TextView
                    android:id="@+id/sound_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="left|center_vertical"
                    android:text="@string/sound_active"
                    android:textIsSelectable="false"
                    android:textStyle="bold"/>

            <CheckBox
                    android:id="@+id/sound_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="right|center_vertical"
                    android:checked="true"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

            <TextView
                    android:id="@+id/beep_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="left|center_vertical"
                    android:text="@string/beep_active"
                    android:textIsSelectable="false"
                    android:textStyle="bold"/>

            <CheckBox
                    android:id="@+id/beep_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="right|center_vertical"
                    android:checked="true"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

            <TextView
                    android:id="@+id/autoflag_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="left|center_vertical"
                    android:text="@string/auto_flag_active"
                    android:textIsSelectable="false"
                    android:textStyle="bold"/>

            <CheckBox
                    android:id="@+id/autoflag_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:checked="true"/>
        </RelativeLayout>


    </LinearLayout>
</ScrollView>